<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rcr.android.wificar.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/labelTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/ConnectionData"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/entryDireccionIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/labelDireccionIP"
        app:layout_constraintTop_toBottomOf="@+id/labelTitulo"
        tools:text="@string/DefaultIP" />

    <EditText
        android:id="@+id/entryPuerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/labelPuerta"
        app:layout_constraintTop_toBottomOf="@+id/entryDireccionIP"
        tools:text="@string/DefaultPort" />

    <TextView
        android:id="@+id/labelPuerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/ServerPort"
        app:layout_constraintBottom_toBottomOf="@+id/entryPuerta"
        app:layout_constraintRight_toRightOf="@+id/labelDireccionIP" />

    <TextView
        android:id="@+id/labelDireccionIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/ServerAddress"
        app:layout_constraintBottom_toBottomOf="@+id/entryDireccionIP"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/botonConectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="80dp"
        android:onClick="onClickConnect"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/entryPuerta"
        app:layout_constraintRight_toRightOf="@+id/entryPuerta"
        app:layout_constraintTop_toBottomOf="@+id/entryPuerta"
        app:srcCompat="@drawable/power_on_off" />

</android.support.constraint.ConstraintLayout>
